# git-ActionTest

./: CMakeLists.txt  Dockerfile  README.md  a.out  example.cpp  test.cpp
.github/workflows/: c-cpp.yml
